# phone-book

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
cmake/: Coverage.cmake  cotire.cmake
modules/app/: CMakeLists.txt
modules/app/src/: CentralWidget.cpp  CentralWidget.h  ContactInfoWidget.cpp  ContactInfoWidget.h  ContactsTableWidget.cpp  ContactsTableWidget.h  EntryField.cpp  EntryField.h  Main.cpp  MainWindow.cpp  MainWindow.h  PhoneBookApplication.cpp  PhoneBookApplication.h  PushButton.cpp  PushButton.h
modules/libpb/: CMakeLists.txt
modules/libpb/include/pb/: Contact.h  PhoneBook.h
modules/libpb/include/pb/Database/: DbHandler.h  PhoneBookWorker.h
modules/libpb/src/: Contact.cpp  DbHandler.cpp  PhoneBook.cpp  PhoneBookWorker.cpp
scripts/: build-msvc15-x64-release.cmd  cmakegen-msvc-15-x64-debug.cmd  db.sql
tests/: CMakeLists.txt  PhoneBookTests.cpp
tests/TestDatabase/: pbTest.db
